--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -35,6 +35,8 @@
 
         <link rel="alternate" type="application/rss+xml" title="RSS" href="https://feeds.feedburner.com/hangfireio">
 
+        <script async defer data-domain="hangfire.io" src="https://plausible.io/js/plausible.js"></script>
+
 <script>
   (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
   (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
