Add clickjacking protection

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -36,6 +36,18 @@
         <link rel="alternate" type="application/rss+xml" title="RSS" href="https://feeds.feedburner.com/hangfireio">
 
         <script async defer data-domain="hangfire.io" src="https://plausible.io/js/plausible.js"></script>
+
+        <style id="antiClickjack">
+          body{display:none !important;}
+        </style>
+        <script type="text/javascript">
+          if (self === top) {
+              var antiClickjack = document.getElementById("antiClickjack");
+              antiClickjack.parentNode.removeChild(antiClickjack);
+          } else {
+              top.location = self.location;
+          }
+        </script>
     </head>
     <body>
         <nav class="navbar navbar-hangfire {% if page.jumbotron != null %}navbar-jumbotron{% endif %}" role="navigation">
