--- a/_layouts/products.html
+++ b/_layouts/products.html
@@ -7,7 +7,7 @@ active: overview
     <div class="row">
         <div class="col-lg-3 col-md-4" role="complementary">
             <div class="bs-sidenav hidden-print">
-                <h4>Hangfire</h4>
+                <h4>Hangfire Core</h4>
                 <ul class="nav">
                     <li {% if page.sub_active == 'overview' %}class="active"{% endif %}><a href="/overview.html">Overview</a></li>
                     <li {% if page.sub_active == 'features' %}class="active"{% endif %}><a href="/features.html">Features</a></li>
