--- a/_includes/blog/recent.html
+++ b/_includes/blog/recent.html
@@ -1,13 +1,13 @@
 <div class="bs-sidenav hidden-print">
     <h4>Posts</h4>
     <ul class="nav">
-        <li class="{% if page.title == 'Hangfire Blog' %}active{% endif %}">
+        <li class="{% if page.title == 'Blog — Hangfire' %}active{% endif %}">
             <a href="/blog/">All Posts</a>
         </li>
-        <li class="{% if page.title == 'Hangfire Releases' %}active{% endif %}">
+        <li class="{% if page.title == 'Releases — Hangfire' %}active{% endif %}">
             <a href="/blog/releases.html">Releases</a>
         </li>
-        <li class="{% if page.title == 'Hangfire Security Announcements' %}active{% endif %}">
+        <li class="{% if page.title == 'Security Announcements — Hangfire' %}active{% endif %}">
             <a href="/blog/security.html">Security Announcements</a>
         </li>
     </ul>
