--- a/css/hangfire.css
+++ b/css/hangfire.css
@@ -155,8 +155,18 @@ code {
 /* Overrides */
 
 @media (min-width:992px){
-    .h-sidenav {
+    .bs-sidenav.h-sidenav {
         margin-bottom: 0;
         position: relative;
+    }
+
+    .row-no-float {
+        display: flex;
+        flex-wrap: wrap;
+    }
+
+    .row-no-float > [class*='col-'] {
+        display: flex;
+        flex-direction: column;
     }
 }
