Moved to position: sticky

--- a/_layouts/products.html
+++ b/_layouts/products.html
@@ -5,8 +5,8 @@ active: overview
 
 <div class="container">
     <div class="row row-no-float">
-        <div class="col-lg-3 col-md-4 js-sticky-wrapper" role="complementary">
-            <div class="bs-sidenav hidden-print h-sidenav js-sticky-target"> 
+        <div class="col-lg-3 col-md-4" role="complementary">
+            <div class="bs-sidenav hidden-print h-sidenav"> 
                 <h4>Hangfire Core</h4>
                 <ul class="nav">
                     <li {% if page.sub_active == 'overview' %}class="active"{% endif %}><a href="/overview.html">Overview</a></li>
