Update copyright to Hangfire OÜ

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -40,7 +40,7 @@
     </div>
     <div class="row">
       <div class="col-md-12">
-        &copy; 2013–2022 <a href="https://github.com/odinserj" target="_blank">Sergey Odinokov</a>
+        &copy; 2013–2022 Hangfire OÜ
       </div>
     </div>
   </div>
