--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -36,6 +36,9 @@
         <script type="text/javascript">if (self === top) {document.getElementById("acj").parentNode.removeChild(acj);} else {top.location = self.location;}</script>
     </head>
     <body>
+      <div style="padding: 8px;color: white;background-color: #8a0303;">
+        <div class="container" style="font-size: 16px;text-align: center;">We are from Russia. We are against aggression and war with Ukraine. Only creation and cooperation have a future</div>
+      </div>
         <nav class="navbar navbar-hangfire {% if page.jumbotron != null %}navbar-jumbotron{% endif %}" role="navigation">
           <div class="container">
             <div class="navbar-header">
