--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -37,7 +37,7 @@
     </head>
     <body>
       <div style="padding: 8px;color: white;background-color: #8a0303;">
-        <div class="container" style="font-size: 16px;text-align: center;">We are from Russia. We are against aggression and war with Ukraine. This is a tragedy for our nations</div>
+        <div class="container" style="font-size: 16px;text-align: center;">We are from Russia. We are against aggression and war with Ukraine. It is a tragedy for our nations, it is a nightmare</div>
       </div>
         <nav class="navbar navbar-hangfire {% if page.jumbotron != null %}navbar-jumbotron{% endif %}" role="navigation">
           <div class="container">
