--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -37,7 +37,7 @@
     </head>
     <body>
       <div style="padding: 8px;color: white;background-color: #8a0303;">
-        <div class="container" style="font-size: 16px;text-align: center;">We are <a href="https://www.hangfire.io/blog/2022/04/04/hangfire-oü.html" style="color: white; text-decoration: underline;">leaving Russia</a>. We are against aggression and war with Ukraine. It is a tragedy for our nations, it is a nightmare</div>
+        <div class="container" style="font-size: 16px;text-align: center;"><a href="https://www.hangfire.io/blog/2022/04/04/hangfire-oü.html" style="color: white; text-decoration: underline;">We left Russia</a>. We are against aggression and war with Ukraine. It is a tragedy for our nations, it is a nightmare</div>
       </div>
         <nav class="navbar navbar-hangfire {% if page.jumbotron != null %}navbar-jumbotron{% endif %}" role="navigation">
           <div class="container">
