--- a/_includes/blog/subtitle.html
+++ b/_includes/blog/subtitle.html
@@ -22,14 +22,14 @@
 	</li>
 	{% endif %}
 
-	{% if site.disqus_short_name and site.disqus_show_comment_count == true %}
-		{% if post.disqus_identifier %}
-	  		{% assign disqus_identifier = post.disqus_identifier %}
+	{% if site.hyvor_website and site.hyvor_show_comment_count == true %}
+		{% if post.hyvor_identifier %}
+	  		{% assign hyvor_identifier = post.hyvor_identifier %}
 		{% else %}
-  			{% assign disqus_identifier = page.disqus_identifier %}
+  			{% assign hyvor_identifier = page.hyvor_identifier %}
 		{% endif %}
 	<li class="hidden-xs">
-		<i class="glyphicon glyphicon-comment"></i>&nbsp;<a href="{{ post.url }}#disqus_thread"{% if disqus_identifier %} data-disqus-identifier="{{ disqus_identifier }}"{% endif %}>0 Comments</a>
+		<i class="glyphicon glyphicon-comment"></i>&nbsp;<a href="{{ post.url }}#hyvor-talk-view"{% if hyvor_identifier %} data-talk-id="{{ hyvor_identifier }}"{% endif %}>0 Comments</a>
 	</li>
 	{% endif %}
 
