--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -36,8 +36,7 @@
         <script type="text/javascript">if (self === top) {document.getElementById("acj").parentNode.removeChild(acj);} else {top.location = self.location;}</script>
     </head>
     <body>
-      <div style="padding: 8px;color: white;background-color: #8a0303;">
-        <div class="container" style="font-size: 16px;text-align: center;"><a href="https://www.hangfire.io/blog/2022/04/04/hangfire-oü.html" style="color: white; text-decoration: underline;">We left Russia</a>. We are against aggression and war with Ukraine. It is a tragedy for our nations, it is a nightmare</div>
+      <div class="slava-ukraine" style="height: 38px; background: repeating-linear-gradient(#045cbc,#045cbc 50%,#fcd404 50%,#fcd404)">
       </div>
         <nav class="navbar navbar-hangfire {% if page.jumbotron != null %}navbar-jumbotron{% endif %}" role="navigation">
           <div class="container">
