Newsletter currently doesn't work after 2022

--- a/_includes/blog/subscribe.html
+++ b/_includes/blog/subscribe.html
@@ -1,5 +1,4 @@
-<div class="bs-sidenav hidden-print">
-	<!-- Begin MailChimp Signup Form -->
+<!--div class="bs-sidenav hidden-print">
 	<h4 style="borer-bottom: none;">Subscribe to updates</h4>
 	<div>
 		<p>
@@ -15,4 +14,4 @@
 		</form>
 		
 	</div>
-</div>
+</div-->
