--- a/_includes/blog/newsletter.html
+++ b/_includes/blog/newsletter.html
@@ -1,5 +1,5 @@
 {% if page.content.size > 2000 %}
-<div id="mc_embed_signup" style="padding: 20px; background-color: whitesmoke; margin: 0 -20px;">
+<!--div id="mc_embed_signup" style="padding: 20px; background-color: whitesmoke; margin: 0 -20px;">
 	<form action="//hangfire.us9.list-manage.com/subscribe/post?u=d2f4abd4cd4d3b1db1b06dc02&amp;id=5a8dbbc33b" method="post" name="mc-embedded-subscribe-form" class="validate" target="_blank" style="padding:0;" novalidate>
 		<h2 style="font-size: 30px;font-weight:normal;margin-top:0;">Subscribe to monthly updates</h2>
 
@@ -14,10 +14,9 @@
 	    	</span>
   		</div>
   		
-		<!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
-	    <div style="position: absolute; left: -5000px;">
+		<div style="position: absolute; left: -5000px;">
 			<input type="text" name="b_d2f4abd4cd4d3b1db1b06dc02_5a8dbbc33b" tabindex="-1" value="">
 		</div>
 	</form>
-</div>
+</div-->
 {% endif %}
