Enable subscription to Hangfire Newsletter

--- a/_includes/blog/newsletter.html
+++ b/_includes/blog/newsletter.html
@@ -1,22 +1,23 @@
 {% if page.content.size > 2000 %}
-<!--div id="mc_embed_signup" style="padding: 20px; background-color: whitesmoke; margin: 0 -20px;">
-	<form action="//hangfire.us9.list-manage.com/subscribe/post?u=d2f4abd4cd4d3b1db1b06dc02&amp;id=5a8dbbc33b" method="post" name="mc-embedded-subscribe-form" class="validate" target="_blank" style="padding:0;" novalidate>
-		<h2 style="font-size: 30px;font-weight:normal;margin-top:0;">Subscribe to monthly updates</h2>
+<div id="mc_embed_signup" style="padding: 20px; background-color: whitesmoke; margin: 0 -20px;">
+	<h2 style="font-size: 30px;font-weight:normal;margin-top:0;">Subscribe to monthly updates</h2>
 
-		<p>
-			Subscribe to receive monthly blog updates. Very low traffic, you are able to unsubscribe at any time.
-		</p>
-
+	<p>
+		Subscribe to receive monthly blog updates. Very low traffic, you are able to unsubscribe at any time.
+	</p>
+	<form class="js-cm-form" id="subForm" action="https://www.createsend.com/t/subscribeerror?description=" method="post" data-id="191722FC90141D02184CB1B62AB3DC266DAF5D832C4D0BFFAD5D07C80FD755E53DCDDCCEFDF8A88D578B9AAD5F57F38D1ED78235D351E67BC1B2296EDF86B43B" style="padding:0;margin-bottom:10px;">
 		<div class="input-group">
-    		<input type="email" value="" name="EMAIL" class="form-control" id="mce-EMAIL" placeholder="me@example.com">
-    		<span class="input-group-btn">
-	    		<input type="submit" value="Subscribe" name="subscribe" class="btn btn-default">
-	    	</span>
-  		</div>
-  		
-		<div style="position: absolute; left: -5000px;">
-			<input type="text" name="b_d2f4abd4cd4d3b1db1b06dc02_5a8dbbc33b" tabindex="-1" value="">
+			<input placeholder="me@example.com" autocomplete="Email" aria-label="Email" class="js-cm-email-input qa-input-email form-control" id="fieldEmail" maxlength="200" name="cm-jidyzl-jidyzl" required="" type="email">
+			<span class="input-group-btn">
+				<button type="submit" class="btn btn-default">Subscribe</button>
+			</span>
 		</div>
+		<div>
+			<input aria-required="" id="cm-privacy-consent" name="cm-privacy-consent" required="" type="checkbox">
+			<label for="cm-privacy-consent" style="font-weight: normal;">I agree to be emailed</label>
+		</div>
+		<input id="cm-privacy-consent-hidden" name="cm-privacy-consent-hidden" type="hidden" value="true">
 	</form>
-</div-->
+	<script type="text/javascript" src="https://js.createsend1.com/javascript/copypastesubscribeformlogic.js"></script>
+</div>
 {% endif %}
