--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -31,7 +31,7 @@
       <div class="col-sm-3 col-xs-6">
         <h4>Contact</h4>
         <ul class="list-unstyled">
-          <!--li><a href="https://eepurl.com/9iQNf" target="_blank">Newsletter</a></li-->
+          <li><a href="https://confirmsubscription.com/h/y/FA03311D02C92F37" target="_blank">Newsletter</a></li>
           <li><a href="/blog/">Blog</a></li>
           <li><a href="https://twitter.com/hangfireio" target="_blank">Twitter</a></li>
           <li><a href="mailto:support@hangfire.io">Support</a></li>
