--- a/_includes/blog/subscribe.html
+++ b/_includes/blog/subscribe.html
@@ -1,17 +1,22 @@
-<!--div class="bs-sidenav hidden-print">
+<div class="bs-sidenav hidden-print">
 	<h4 style="borer-bottom: none;">Subscribe to updates</h4>
 	<div>
 		<p>
 			Subscribe to receive monthly blog updates. Very low traffic, you can unsubscribe at any time.
 		</p>
-		<form action="//hangfire.us9.list-manage.com/subscribe/post?u=d2f4abd4cd4d3b1db1b06dc02&amp;id=5a8dbbc33b" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" target="_blank" novalidate style="padding:0;margin-bottom:10px;">
-			<div class="input-group">
-	      		<input type="email" value="" name="EMAIL" class="form-control" id="mce-EMAIL" placeholder="me@example.com">
-	      		<span class="input-group-btn">
-	        		<input type="submit" value="Subscribe" name="subscribe" class="btn btn-default">
-	      		</span>
-	    	</div>
-		</form>
-		
+		<form class="js-cm-form" id="subForm" action="https://www.createsend.com/t/subscribeerror?description=" method="post" data-id="191722FC90141D02184CB1B62AB3DC266DAF5D832C4D0BFFAD5D07C80FD755E53DCDDCCEFDF8A88D578B9AAD5F57F38D1ED78235D351E67BC1B2296EDF86B43B" style="padding:0;margin-bottom:10px;">
+            <div class="input-group">
+                <input placeholder="me@example.com" autocomplete="Email" aria-label="Email" class="js-cm-email-input qa-input-email form-control" id="fieldEmail" maxlength="200" name="cm-jidyzl-jidyzl" required="" type="email">
+                <span class="input-group-btn">
+                    <button type="submit" class="btn btn-default">Subscribe</button>
+                </span>
+            </div>
+            <div>
+                <input aria-required="" id="cm-privacy-consent" name="cm-privacy-consent" required="" type="checkbox">
+                <label for="cm-privacy-consent" style="font-weight: normal;">I agree to be emailed</label>
+            </div>
+            <input id="cm-privacy-consent-hidden" name="cm-privacy-consent-hidden" type="hidden" value="true">
+        </form>
+        <script type="text/javascript" src="https://js.createsend1.com/javascript/copypastesubscribeformlogic.js"></script>
 	</div>
-</div-->
+</div>
