Disable email tracking in newsletters by default

--- a/_includes/blog/subscribe.html
+++ b/_includes/blog/subscribe.html
@@ -16,6 +16,8 @@
                 <label for="cm-privacy-consent" style="font-weight: normal;">I agree to be emailed</label>
             </div>
             <input id="cm-privacy-consent-hidden" name="cm-privacy-consent-hidden" type="hidden" value="true">
+            <!-- Disable email tracking by default -->
+		    <input type="hidden" id="cm-privacy-email" name="cm-privacy-email" type="checkbox">
         </form>
         <script type="text/javascript" src="https://js.createsend1.com/javascript/copypastesubscribeformlogic.js"></script>
 	</div>
