--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -40,7 +40,7 @@
     </div>
     <div class="row">
       <div class="col-md-12">
-        &trade; and &copy; 2013–2023 Hangfire OÜ. Ahtri tn 12, Tallinn, Harjumaa 15551, Estonia
+        &trade; and &copy; 2013–2023 Hangfire OÜ. Ahtri 12, Tallinn, Harjumaa 15551, Estonia
       </div>
     </div>
   </div>
