--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -4,7 +4,7 @@
       <div class="col-sm-3 col-xs-6">
         <h4>Products</h4>
         <ul class="list-unstyled">
-          <li><a href="/overview.html">Hangfire</a></li>
+          <li><a href="/overview.html">Hangfire Core</a></li>
           <li><a href="/pro/">Hangfire Pro</a></li>
           <li><a href="/ace/">Hangfire Ace</a></li>
           <li><a href="/pricing/">Pricing</a></li>
