Improve styling of the recent news block

--- a/_includes/news.html
+++ b/_includes/news.html
@@ -9,10 +9,10 @@
             </p>
             {% capture date %}{{ page.date }}{{ post.date }}{% endcapture %}
             {% if date.size > 0 %}
-            <i>
-            <i class="glyphicon glyphicon-calendar"></i>&nbsp;<time datetime="{{ date | datetime | date_to_xmlschema }}" itemprop="datePublished">{{ date | date: "%B %e, %Y" }}</time>
+            <span class="text-muted">
+                <i class="glyphicon glyphicon-calendar"></i>&nbsp;<time datetime="{{ date | datetime | date_to_xmlschema }}" itemprop="datePublished">{{ date | date: "%B %e, %Y" }}</time>
+            </span>
         </a>
-    </i>
         {% endif %}        
     </li>
 {% endfor %}
