--- a/css/styles.css
+++ b/css/styles.css
@@ -444,15 +444,23 @@ article.eula {
 .recent-news h5 {
     margin-top: 0;
     color: #337ab7;
+    font-size: 16px;
+}
+
+.recent-news p {
+    margin-bottom: 5px;
 }
 
 .recent-news .link {
     display: block;
     color: inherit;
-    padding: 5px 10px;
+    margin-bottom: 10px;
 }
 
 .recent-news .link:hover {
-    background-color: #f9f9f9;
     text-decoration: none;    
+}
+
+.recent-news .link:hover h5 {
+    text-decoration: underline;
 }
