--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -7,7 +7,7 @@
           <li><a href="/overview.html">Hangfire Core</a></li>
           <li><a href="/pro/">Hangfire Pro</a></li>
           <li><a href="/ace/">Hangfire Ace</a></li>
-          <li><a href="/pricing/">Pricing</a></li>
+          <li><a href="/pricing/">Plans &amp; Pricing</a></li>
         </ul>
       </div>
       <div class="col-sm-3 col-xs-6">
