Publish privacy, cookie policies and cookie consent

--- a/_layouts/products.html
+++ b/_layouts/products.html
@@ -34,6 +34,12 @@ active: overview
                     <li {% if page.sub_active == 'royalty-free' %}class="active"{% endif %}><a href="/licensing/royalty-free.html">Royalty-free EULA</a></li>
                     <li {% if page.sub_active == 'third-party' %}class="active"{% endif %}><a href="/licensing/third-party.html">Third Party Notices</a></li>
                 </ul>
+                <h4>Legal</h4>
+                <ul class="nav nav-list">
+                    <li {% if page.sub_active == 'privacy-policy' %}class="active"{% endif %}><a href="/legal/privacy-policy.html">Privacy Policy</a></li>
+                    <li {% if page.sub_active == 'cookie-policy' %}class="active"{% endif %}><a href="/legal/cookie-policy.html">Cookie Policy</a></li>
+                    <li {% if page.sub_active == 'service-providers' %}class="active"{% endif %}><a href="/legal/service-providers.html">Service Providers</a></li>
+                </ul>
             </div>
         </div>
         <div class="col-lg-9 col-md-8" role="main">
