Include terms & conditions

--- a/_layouts/products.html
+++ b/_layouts/products.html
@@ -39,6 +39,7 @@ active: overview
                     <li {% if page.sub_active == 'privacy-policy' %}class="active"{% endif %}><a href="/legal/privacy-policy.html">Privacy Policy</a></li>
                     <li {% if page.sub_active == 'cookie-policy' %}class="active"{% endif %}><a href="/legal/cookie-policy.html">Cookie Policy</a></li>
                     <li {% if page.sub_active == 'service-providers' %}class="active"{% endif %}><a href="/legal/service-providers.html">Service Providers</a></li>
+                    <li {% if page.sub_active == 'terms-and-conditions' %}class="active"{% endif %}><a href="/legal/terms-and-conditions.html">Terms & Conditions</a></li>
                 </ul>
             </div>
         </div>
