Make lighthouse happy

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -21,6 +21,9 @@
         
         <!--link href="{{ site.url }}{{ page.url }}" rel="canonical"-->
 
+        <link rel="preload" href="{{ site.cdn }}/fonts/glyphicons-halflings-regular.woff2" as="font" type="font/woff2" crossorigin>
+        <link rel="preload" href="{{ site.cdn }}/fonts/fontawesome-webfont.woff2?v=4.3.0" as="font" type="font/woff2" crossorigin>
+
         <link href="{{ site.cdn }}/css/bootstrap.min.css" rel="stylesheet">
         <link href="{{ site.cdn }}/css/font-awesome.min.css" rel="stylesheet">
         <link href="{{ site.cdn }}/css/lightbox.css" rel="stylesheet">
