--- a/_layouts/blog.html
+++ b/_layouts/blog.html
@@ -4,7 +4,7 @@ layout: default
 
 <div class="container">
 	<div class="row">
-		<div class="col-md-8">
+		<div class="col-md-8 col-print-12">
 			<h1 class="page-header">
 				<span class="sub-header">
 					<i class="fa fa-rss"></i>
@@ -31,7 +31,7 @@ layout: default
 				</ul>
 			</nav>
 		</div>
-		<div class="col-md-4">
+		<div class="col-md-4 hidden-print">
 			{% include blog/sidebar.html %}
 		</div>
 	</div>
