--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -5,7 +5,7 @@ active: blog
 
 <div class="container">
 	<div class="row">
-		<div class="col-md-8">
+		<div class="col-md-8 col-print-12">
 			<ol class="breadcrumb">
 				<li><a href="/">Home</a></li>
   				<li><a href="/blog/">Blog</a></li>
@@ -38,7 +38,7 @@ active: blog
 			</section>
 			{% endif %}
 		</div>
-		<div class="col-md-4">
+		<div class="col-md-4 hidden-print">
 			{% include blog/sidebar.html %}
 		</div>
 	</div>
