--- a/css/hangfire.css
+++ b/css/hangfire.css
@@ -24,6 +24,13 @@
     }
 }
 
+@media print{
+    *,:after,:before {
+        color: inherit !important;
+        background: inherit !important;
+    }
+}
+
 .navbar-hangfire {
     margin-bottom: 30px;
     background-color: #eee;
