--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -33,8 +33,8 @@
         <ul class="list-unstyled">
           <li><a href="/blog/">Blog</a></li>
           <li><a href="https://news.hangfire.io/h/y/FA03311D02C92F37" target="_blank">Newsletter</a></li>
-          <li><a href="https://twitter.com/hangfireio" target="_blank">Twitter</a></li>
           <li><a href="mailto:support@hangfire.io">Support</a></li>
+          <li><a href="https://status.hangfire.io/" target="_blank">Status</a></li>
         </ul>
       </div>
     </div>
