--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -44,7 +44,7 @@
         <script type="text/javascript">if (self === top) {document.getElementById("acj").parentNode.removeChild(acj);} else {top.location = self.location;}</script>
     </head>
     <body>
-      <div class="slava-ukraine" style="height: 38px; background: black;">
+      <div class="slava-ukraine" style="height: 38px; background: repeating-linear-gradient(#045cbc,#045cbc 50%,#fcd404 50%,#fcd404);">
       </div>
         <nav class="navbar navbar-hangfire {% if page.jumbotron != null %}navbar-jumbotron{% endif %}" role="navigation">
           <div class="container">
