--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -13,8 +13,7 @@
         {% endif %}
 
         <link rel="apple-touch-icon" sizes="180x180" href="{{ site.cdn }}/apple-touch-icon.png">
-        <link rel="icon" type="image/png" sizes="32x32" href="{{ site.cdn }}/favicon-32x32.png">
-        <link rel="icon" type="image/png" sizes="16x16" href="{{ site.cdn }}/favicon-16x16.png">
+        <link rel="icon" type="image/png" href="{{ site.cdn }}/favicon-32x32.png">
         <link rel="manifest" href="{{ site.cdn }}/site.webmanifest"> 
 
         <meta name="twitter:site" content="@hangfireio">
