Add Hangfire logo to the web site

--- a/css/hangfire.css
+++ b/css/hangfire.css
@@ -30,6 +30,10 @@
     border: none;
 }
 
+.navbar-hangfire .navbar-brand {
+    padding: 10px 15px;
+}
+
 .navbar-hangfire .navbar-nav .active>a, 
 .navbar-hangfire .navbar-nav .active>a:hover {
     background-color: #ccc;
