--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -32,8 +32,8 @@
         <link href="{{ site.cdn }}/css/font-awesome.min.css" rel="stylesheet">
         <link href="{{ site.cdn }}/css/lightbox.css" rel="stylesheet">
         <link href="{{ site.cdn }}/css/highlight.css" rel="stylesheet">
-        <link href="{{ site.cdn }}/css/hangfire.css" rel="stylesheet">
-        <link href="{{ site.cdn }}/css/styles.css" rel="stylesheet">
+        <link href="{{ site.cdn }}/css/hangfire.css?v2" rel="stylesheet">
+        <link href="{{ site.cdn }}/css/styles.css?v2" rel="stylesheet">
 
         <link rel="alternate" type="application/rss+xml" title="RSS" href="https://feeds.feedburner.com/hangfireio">
 
@@ -56,7 +56,7 @@
               </button>
               {% if page.jumbotron == null %}
               <a class="navbar-brand" href="/">
-                {{ site.title }}
+                <img src="{{ site.cdn }}/logo.svg" alt="Hangfire Logo" height="28">
               </a>
               {% endif %}
             </div>
