--- a/_includes/blog/newsletter.html
+++ b/_includes/blog/newsletter.html
@@ -1,5 +1,5 @@
 {% if page.content.size > 2000 %}
-<div id="mc_embed_signup" style="padding: 20px; background-color: whitesmoke; margin: 0 -20px;">
+<div id="mc_embed_signup" style="padding: 20px; background-color: whitesmoke; margin: 20px -20px;border-radius:5px;">
 	<h2 style="font-size: 30px;font-weight:normal;margin-top:0;">Subscribe to monthly updates</h2>
 
 	<p>
