Update checkbox styles for newsletter forms

--- a/_includes/blog/newsletter.html
+++ b/_includes/blog/newsletter.html
@@ -12,9 +12,11 @@
 				<button type="submit" class="btn btn-default">Subscribe</button>
 			</span>
 		</div>
-		<div>
-			<input aria-required="" id="cm-privacy-consent" name="cm-privacy-consent" required="" type="checkbox">
-			<label for="cm-privacy-consent" style="font-weight: normal;">I agree to be emailed</label>
+		<div class="checkbox">
+			<label for="cm-privacy-consent">
+				<input aria-required="" id="cm-privacy-consent" name="cm-privacy-consent" required="" type="checkbox">
+				I agree to be emailed
+			</label>
 		</div>
 		<input id="cm-privacy-consent-hidden" name="cm-privacy-consent-hidden" type="hidden" value="true">
 		<!-- Disable email tracking by default -->
