--- a/_includes/blog/subscribe.html
+++ b/_includes/blog/subscribe.html
@@ -1,5 +1,5 @@
 <div class="bs-sidenav hidden-print">
-	<h4 style="borer-bottom: none;">Subscribe to updates</h4>
+	<h4>Subscribe to updates</h4>
 	<div>
 		<p>
 			Subscribe to receive monthly blog updates. Very low traffic, you can unsubscribe at any time.
@@ -11,9 +11,11 @@
                     <button type="submit" class="btn btn-default">Subscribe</button>
                 </span>
             </div>
-            <div>
-                <input aria-required="" id="cm-privacy-consent" name="cm-privacy-consent" required="" type="checkbox">
-                <label for="cm-privacy-consent" style="font-weight: normal;">I agree to be emailed</label>
+            <div class="checkbox">
+                <label for="cm-privacy-consent">
+                    <input aria-required="" id="cm-privacy-consent" name="cm-privacy-consent" required="" type="checkbox">
+                    I agree to be emailed
+                </label>
             </div>
             <input id="cm-privacy-consent-hidden" name="cm-privacy-consent-hidden" type="hidden" value="true">
             <!-- Disable email tracking by default -->
