--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,6 +1,6 @@
-<footer id="footer">
+<footer id="footer" class="hidden-print">
   <div class="container">
-    <div class="row hidden-print">
+    <div class="row">
       <div class="col-sm-3 col-xs-6">
         <h4>Products</h4>
         <ul class="list-unstyled">
